--- a/Sass/_placeholder.scss
+++ b/Sass/_placeholder.scss
@@ -7,10 +7,11 @@
     display: flex;
     font-size: 23px;
     margin-top: 12px;
+    text-decoration: none;
 }
 .price{
+    font-family: 'robotobold';
     display: flex;
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 8px;
+    font-size: 15px;
+    margin-top: 15px;
 }
