--- a/Sass/palette.css
+++ b/Sass/palette.css
@@ -1,4 +1,4 @@
-.flexcenter, .containername, .header {
+.flexcenter, .ok, .containername, .header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,13 +8,14 @@
   display: flex;
   font-size: 23px;
   margin-top: 12px;
+  text-decoration: none;
 }
 
 .price, .price9, .price8, .price7, .price6, .price5, .price4, .price3, .price2, .price1 {
+  font-family: "robotobold";
   display: flex;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 8px;
+  font-size: 15px;
+  margin-top: 15px;
 }
 
 @font-face {
@@ -22,12 +23,24 @@
   src: url("shrikhand/Shrikhand-Regular.otf");
 }
 @font-face {
-  font-family: "roboto_condensedregular";
-  src: url("RobotoCondensed-Regular-webfont.eot");
-  src: url("RobotoCondensed-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Regular-webfont.woff2") format("woff2"), url("RobotoCondensed-Regular-webfont.woff") format("woff"), url("RobotoCondensed-Regular-webfont.ttf") format("truetype"), url("RobotoCondensed-Regular-webfont.svg#roboto_condensedregular") format("svg");
+  font-family: "roboto_condensedlight";
+  src: url("RobotoCondensed-Light-webfont.eot");
+  src: url("RobotoCondensed-Light-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Light-webfont.woff") format("woff"), url("RobotoCondensed-Light-webfont.ttf") format("truetype"), url("RobotoCondensed-Light-webfont.svg#roboto_condensedlight") format("svg");
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "robotobold";
+  src: url("Roboto-Bold-webfont.eot");
+  src: url("Roboto-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("Roboto-Bold-webfont.woff") format("woff"), url("Roboto-Bold-webfont.ttf") format("truetype"), url("Roboto-Bold-webfont.svg#robotobold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+body {
+  font-family: "roboto_condensedlight";
+  font-weight: bold;
+}
+
 .header {
   width: 100%;
 }
@@ -67,26 +80,75 @@
 }
 
 h1 {
+  font-family: "shrikhand";
   font-size: 30px;
-  margin-left: -5px;
+  margin-left: -7px;
 }
 
 .heart {
   font-size: 25px;
-  margin-left: 50px;
+  margin-left: 30px;
   margin-top: 2px;
 }
 
 /*PROPOSITIONS PLATS*/
 h2 {
   font-weight: normal;
-  font-size: 18px;
+  font-size: 17px;
   margin-left: 10px;
 }
 
 span {
   border-bottom: 2px solid #99E2D0;
   padding-bottom: 5px;
+}
+
+.transition1 {
+  -webkit-animation: opening 2s;
+          animation: opening 2s;
+}
+
+.transition2 {
+  -webkit-animation: opening 3s;
+          animation: opening 3s;
+}
+
+.transition3 {
+  -webkit-animation: opening 4s;
+          animation: opening 4s;
+}
+
+@-webkit-keyframes opening {
+  from {
+    transform: translateY(150px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes opening {
+  from {
+    transform: translateY(150px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.title {
+  margin-bottom: 25px;
+}
+
+.sticker {
+  text-decoration: none;
+  color: black;
+}
+.sticker:hover + .ok {
+  transform: translateY(50px, 10px);
 }
 
 .txtsticker {
@@ -98,6 +160,11 @@ span {
   margin-right: 8px;
   box-shadow: 2px 3px #e7e5e5;
   margin-bottom: 10px;
+}
+
+h3 {
+  font-family: "robotobold";
+  font-size: 16px;
 }
 
 .naming, .sidedish, .price, .price9, .price8, .price7, .price6, .price5, .price4, .price3, .price2, .price1 {
@@ -117,42 +184,57 @@ span {
 
 p {
   font-size: 15px;
+  font-weight: normal;
 }
 
 .price1 {
-  margin-left: 150Px;
+  margin-left: 182Px;
 }
 
 .price2 {
-  margin-left: 103px;
+  margin-left: 136px;
 }
 
 .price3 {
-  margin-left: 54px;
+  margin-left: 91px;
 }
 
 .price4 {
-  margin-left: 29px;
+  margin-left: 65px;
 }
 
 .price5 {
-  margin-left: 51px;
+  margin-left: 86px;
 }
 
 .price6 {
-  margin-left: 202px;
+  margin-left: 227px;
 }
 
 .price7 {
-  margin-left: 233px;
+  margin-left: 257px;
 }
 
 .price8 {
-  margin-left: 71px;
+  margin-left: 105px;
 }
 
 .price9 {
-  margin-left: 41px;
+  margin-left: 77px;
+}
+
+.ok {
+  background-color: #99E2D0;
+  width: 60px;
+  left: 309px;
+  position: absolute;
+  overflow: hidden;
+  border-radius: 0px 15px 15px 0px;
+  height: 65px;
+  justify-content: center;
+  align-items: center;
+  font-size: 19px;
+  color: white;
 }
 
 /*BOUTON COMMANDER*/
@@ -163,6 +245,7 @@ p {
   color: white;
   text-decoration: none;
   font-size: 15px;
+  font-weight: bold;
   border-radius: 20px;
   justify-content: center;
   margin-left: 115px;
@@ -185,6 +268,8 @@ p {
 }
 
 h6 {
+  font-family: "shrikhand";
+  font-weight: normal;
   color: white;
   font-size: 20px;
   margin-left: 15px;
@@ -214,8 +299,15 @@ h6 {
   display: flex;
   margin-right: 8px;
   font-size: 11px;
+  margin-top: 5px;
 }
 
 .mentions {
   margin-bottom: 5px;
-}/*# sourceMappingURL=palette.css.map */
+}
+
+.contact {
+  display: flex;
+  color: white;
+  text-decoration: none;
+}/*# sourceMappingURL=Palette.css.map */
