--- a/Sass/palette.scss
+++ b/Sass/palette.scss
@@ -7,17 +7,30 @@
     src: url('shrikhand/Shrikhand-Regular.otf');
 }
 @font-face {
-    font-family: 'roboto_condensedregular';
-    src: url('RobotoCondensed-Regular-webfont.eot');
-    src: url('RobotoCondensed-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('RobotoCondensed-Regular-webfont.woff2') format('woff2'),
-         url('RobotoCondensed-Regular-webfont.woff') format('woff'),
-         url('RobotoCondensed-Regular-webfont.ttf') format('truetype'),
-         url('RobotoCondensed-Regular-webfont.svg#roboto_condensedregular') format('svg');
+    font-family: 'roboto_condensedlight';
+    src: url('RobotoCondensed-Light-webfont.eot');
+    src: url('RobotoCondensed-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('RobotoCondensed-Light-webfont.woff') format('woff'),
+         url('RobotoCondensed-Light-webfont.ttf') format('truetype'),
+         url('RobotoCondensed-Light-webfont.svg#roboto_condensedlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'robotobold';
+    src: url('Roboto-Bold-webfont.eot');
+    src: url('Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Roboto-Bold-webfont.woff') format('woff'),
+         url('Roboto-Bold-webfont.ttf') format('truetype'),
+         url('Roboto-Bold-webfont.svg#robotobold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
+body{
+    font-family:'roboto_condensedlight';
+    font-weight: bold;
+}
 .header{
     width: 100%;
     @extend .flexcenter;
@@ -53,23 +66,51 @@
     margin-left: -10px;
 }
 h1{
+    font-family: 'shrikhand';
     font-size: 30px;
-    margin-left: -5px;
+    margin-left: -7px;
 }
 .heart{
     font-size: 25px;
-    margin-left: 50px;
+    margin-left: 30px;
     margin-top: 2px;
 }
                         /*PROPOSITIONS PLATS*/
+
 h2{
     font-weight: normal;
-    font-size: 18px;
+    font-size: 17px;
     margin-left: 10px;
 }
 span{
     border-bottom: 2px solid $Tertiary-color;
     padding-bottom: 5px;
+}
+.transition1{
+    animation: opening 2s;
+}
+.transition2{
+    animation: opening 3s;
+}
+.transition3{
+    animation: opening 4s;
+}
+@keyframes opening{
+    from{
+        transform: translateY(150px);
+        opacity:0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+.title{
+    margin-bottom: 25px;
+}
+.sticker{
+    text-decoration: none;
+    color: black;
 }
 .txtsticker{
     display: flex;
@@ -80,6 +121,13 @@ span{
     margin-right: 8px;
     box-shadow: 2px 3px rgb(231, 229, 229);
     margin-bottom: 10px;
+    &:hover + .ok{
+        transition: 2s;
+        transform: translateY(50px, 10px);
+}
+h3{
+    font-family:'robotobold';
+    font-size: 16px;
 }
 .naming, .sidedish, .price{
     margin-left: 10px;
@@ -95,42 +143,57 @@ span{
 }
 p{
     font-size: 15px;
+    font-weight: normal
 }
 .price1{
     @extend .price;
-    margin-left: 150Px;
+    margin-left: 182Px;
 }
 .price2{
     @extend .price;
-    margin-left: 103px;
+    margin-left: 136px;
 }
 .price3{
     @extend .price;
-    margin-left: 54px;
+    margin-left: 91px;
 }
 .price4{
     @extend .price;
-    margin-left: 29px;
+    margin-left: 65px;
 }
 .price5{
     @extend .price;
-    margin-left: 51px;
+    margin-left: 86px;
 }
 .price6{
     @extend .price;
-    margin-left: 202px;
+    margin-left: 227px;
 }
 .price7{
     @extend .price;
-    margin-left: 233px;
+    margin-left: 257px;
 }
 .price8{
     @extend .price;
-    margin-left: 71px;
+    margin-left: 105px;
 }
 .price9{
     @extend .price;
-    margin-left: 41px;
+    margin-left: 77px;
+}
+.ok{
+    @extend .flexcenter;
+    background-color: #99E2D0;
+    width: 60px;
+    left: 309px;
+    position: absolute;
+    overflow: hidden;
+    border-radius: 0px 15px 15px 0px;
+    height: 65px;
+    justify-content: center;
+    align-items: center;
+    font-size: 19px;
+    color: white;
 }
             /*BOUTON COMMANDER*/
 .btn{
@@ -140,6 +203,7 @@ p{
     color: white ;
     text-decoration: none;
     font-size: 15px;
+    font-weight: bold;
     border-radius: 20px;
     justify-content: center;
     margin-left: 115px;
@@ -160,6 +224,8 @@ p{
     width: 100%;
     }
 h6{
+    font-family: 'shrikhand';
+    font-weight: normal;
     color: white;
     font-size: 20px;
     margin-left: 15px;
@@ -185,7 +251,13 @@ h6{
     display: flex;
     margin-right: 8px;
     font-size: 11px;
+    margin-top: 5px;
 }
 .mentions{
     margin-bottom: 5px;
+}
+.contact{
+    display: flex;
+    color: white;
+    text-decoration: none;
 }
