--- a/Sass/style.css
+++ b/Sass/style.css
@@ -8,13 +8,14 @@
   display: flex;
   font-size: 23px;
   margin-top: 12px;
+  text-decoration: none;
 }
 
 .price {
+  font-family: "robotobold";
   display: flex;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 8px;
+  font-size: 15px;
+  margin-top: 15px;
 }
 
 @font-face {
@@ -22,14 +23,21 @@
   src: url("shrikhand/Shrikhand-Regular.otf");
 }
 @font-face {
-  font-family: "robotobold";
-  src: url("Roboto-Bold-webfont.eot");
-  src: url("Roboto-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("Roboto-Bold-webfont.woff2") format("woff2"), url("Roboto-Bold-webfont.woff") format("woff"), url("Roboto-Bold-webfont.ttf") format("truetype"), url("Roboto-Bold-webfont.svg#robotobold") format("svg");
+  font-family: "roboto_condensedbold";
+  src: url("RobotoCondensed-Bold-webfont.eot");
+  src: url("RobotoCondensed-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Bold-webfont.woff2") format("woff2"), url("RobotoCondensed-Bold-webfont.woff") format("woff"), url("RobotoCondensed-Bold-webfont.ttf") format("truetype"), url("RobotoCondensed-Bold-webfont.svg#roboto_condensedbold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "roboto_condensedlight";
+  src: url("RobotoCondensed-Light-webfont.eot");
+  src: url("RobotoCondensed-Light-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Light-webfont.woff") format("woff"), url("RobotoCondensed-Light-webfont.ttf") format("truetype"), url("RobotoCondensed-Light-webfont.svg#roboto_condensedlight") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 body {
-  font-family: "roboto_condensedregular";
+  font-family: "roboto_condensedbold";
   font-weight: bold;
 }
 
@@ -86,6 +94,7 @@ h1 {
 h2 {
   display: flex;
   text-align: center;
+  font-family: "roboto_condensedlight";
   font-size: 16px;
   font-weight: normal;
   color: #8a8888;
@@ -106,6 +115,7 @@ h2 {
   border: none;
   color: white;
   text-decoration: none;
+  font-family: "roboto_condensedlight";
   font-size: 15px;
   font-weight: normal;
   border-radius: 20px;
@@ -123,6 +133,7 @@ h2 {
 .btn:hover {
   background: #FF79DA;
   box-shadow: 3px 7px #c9c6c6;
+  transition: 1s;
 }
 
 /* 2eme Section Fonctionnement et 3 boutons*/
@@ -142,8 +153,14 @@ h3 {
   position: relative;
 }
 
+.pic1 {
+  margin-right: 33px;
+  margin-left: 23px;
+  font-size: 20px;
+}
+
 .pic {
-  margin-right: 30px;
+  margin-right: 26px;
   margin-left: 5px;
   font-size: 20px;
 }
@@ -160,7 +177,7 @@ h3 {
   padding-top: 18px;
   padding-bottom: 18px;
   padding-right: 75px;
-  padding-left: 40px;
+  padding-left: 30px;
   margin-bottom: 15px;
   margin-right: 10px;
   width: 255px;
@@ -234,10 +251,9 @@ h4 {
 }
 
 .fa-heart {
-  background-color: white;
   transition: 0s;
 }
-.fa-heart:hover {
+.fa-heart:active {
   transition: 5s;
   color: #FF79DA;
 }
@@ -255,6 +271,7 @@ h4 {
 }
 
 h5 {
+  font-family: "roboto_condensedlight";
   font-size: 20px;
   font-weight: normal;
   margin-top: -25px;
@@ -277,6 +294,7 @@ h6 {
   font-family: "shrikhand";
   color: white;
   font-size: 20px;
+  font-weight: normal;
   margin-left: 15px;
   padding-top: 15px;
   margin-bottom: 10px;
@@ -284,6 +302,7 @@ h6 {
 }
 
 .txtfooter {
+  font-family: "roboto_condensedlight";
   font-size: 15px;
   font-weight: normal;
   color: white;
@@ -305,6 +324,7 @@ h6 {
   display: flex;
   margin-right: 8px;
   font-size: 11px;
+  margin-top: 5px;
 }
 
 .mentions {
