--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -6,20 +6,30 @@
     font-family: 'Shrikhand';
     src: url('shrikhand/Shrikhand-Regular.otf');
 }
-
 @font-face {
-        font-family: 'robotobold';
-        src: url('Roboto-Bold-webfont.eot');
-        src: url('Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-             url('Roboto-Bold-webfont.woff2') format('woff2'),
-             url('Roboto-Bold-webfont.woff') format('woff'),
-             url('Roboto-Bold-webfont.ttf') format('truetype'),
-             url('Roboto-Bold-webfont.svg#robotobold') format('svg');
-        font-weight: normal;
-        font-style: normal;
+    font-family: 'roboto_condensedbold';
+    src: url('RobotoCondensed-Bold-webfont.eot');
+    src: url('RobotoCondensed-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('RobotoCondensed-Bold-webfont.woff2') format('woff2'),
+         url('RobotoCondensed-Bold-webfont.woff') format('woff'),
+         url('RobotoCondensed-Bold-webfont.ttf') format('truetype'),
+         url('RobotoCondensed-Bold-webfont.svg#roboto_condensedbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'roboto_condensedlight';
+    src: url('RobotoCondensed-Light-webfont.eot');
+    src: url('RobotoCondensed-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('RobotoCondensed-Light-webfont.woff') format('woff'),
+         url('RobotoCondensed-Light-webfont.ttf') format('truetype'),
+         url('RobotoCondensed-Light-webfont.svg#roboto_condensedlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 body{
-    font-family: 'roboto_condensedregular';
+    font-family: 'roboto_condensedbold';
     font-weight: bold;
 }
                                     /*Header*/
@@ -70,6 +80,7 @@ h1{
 h2{
     display: flex;
     text-align: center;
+    font-family: 'roboto_condensedlight';
     font-size: 16px;
     font-weight: normal;
     color:rgb(138, 136, 136);
@@ -88,6 +99,7 @@ h2{
     border: none;
     color: white ;
     text-decoration: none;
+    font-family: 'roboto_condensedlight';
     font-size: 15px;
     font-weight: normal;
     border-radius: 20px;
@@ -104,6 +116,7 @@ h2{
     &:hover{
         background: $Secondary-color;
         box-shadow: 3px 7px #c9c6c6;
+        transition: 1s;
     }
 }
 
@@ -122,8 +135,13 @@ h3{
     margin-left: 10px;
     position: relative;
 }
+.pic1{
+    margin-right: 33px;
+    margin-left: 23px;
+    font-size: 20px
+}
 .pic{
-    margin-right: 30px;
+    margin-right: 26px;
     margin-left: 5px;
     font-size: 20px
 }
@@ -140,7 +158,7 @@ h3{
     padding-top: 18px;
     padding-bottom: 18px;
     padding-right: 75px;
-    padding-left: 40px;
+    padding-left: 30px;
     margin-bottom: 15px;
     margin-right: 10px;
     width: 255px
@@ -208,14 +226,12 @@ h4{
     margin-left: 120px;
 }
 .fa-heart{
-    background-color: white;
     transition: 0s;
-    &:hover{
+    &:active{
         transition: 5s;
         color: $Secondary-color;
     }
 }
-
 .heart2{
     @extend .heart;
     margin-left: 130px;
@@ -229,6 +245,7 @@ h4{
     margin-left: 126px;
 }
 h5{
+    font-family: 'roboto_condensedlight';
     font-size: 20px;
     font-weight: normal;
     margin-top: -25px;
@@ -248,12 +265,14 @@ h5{
      font-family: 'shrikhand';
      color: white;
      font-size: 20px;
+     font-weight: normal;
      margin-left: 15px;
      padding-top: 15px;
      margin-bottom: 10px;
      margin-top: 0px;
 }   
 .txtfooter{
+    font-family: 'roboto_condensedlight';
     font-size: 15px;
     font-weight: normal;
     color: white;
@@ -272,6 +291,7 @@ h5{
     display: flex;
     margin-right: 8px;
     font-size: 11px;
+    margin-top: 5px;
 }
 .mentions{
     margin-bottom: 5px
