--- a/Sass/_placeholder.scss
+++ b/Sass/_placeholder.scss
@@ -1,8 +1,3 @@
-.flexcenter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .heart{
     display: flex;
     font-size: 23px;
@@ -14,4 +9,15 @@
     display: flex;
     font-size: 15px;
     margin-top: 15px;
+    margin-right: 20px;
+}
+@keyframes opening{
+    from{
+        transform: translateY(150px);
+        opacity:0;
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
