--- a/Sass/menu.css
+++ b/Sass/menu.css
@@ -1,3 +1,8 @@
+@flexcenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .flexcenter, .ok, .containername, .header {
   display: flex;
   justify-content: center;
@@ -11,13 +16,35 @@
   text-decoration: none;
 }
 
-.price, .price9, .price8, .price7, .price6, .price5, .price4, .price3, .price2, .price1 {
+.price, .price1, .price2, .price3, .price4, .price5, .price6, .price7, .price8, .price9 {
   font-family: "robotobold";
   display: flex;
   font-size: 15px;
   margin-top: 15px;
+  margin-right: 20px;
 }
 
+@-webkit-keyframes opening {
+  from {
+    transform: translateY(150px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes opening {
+  from {
+    transform: translateY(150px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 @font-face {
   font-family: "Shrikhand";
   src: url("shrikhand/Shrikhand-Regular.otf");
@@ -41,6 +68,42 @@ body {
   font-weight: bold;
 }
 
+.loader {
+  display: none;
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 3s linear;
+          animation: spin 3s linear;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: O;
+    transition-duration: 5s;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: O;
+    transition-duration: 5s;
+  }
+}
 .header {
   width: 100%;
 }
@@ -118,27 +181,6 @@ span {
           animation: opening 4s;
 }
 
-@-webkit-keyframes opening {
-  from {
-    transform: translateY(150px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes opening {
-  from {
-    transform: translateY(150px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 .title {
   margin-bottom: 25px;
 }
@@ -159,8 +201,8 @@ span {
   margin-bottom: 10px;
 }
 .txtsticker:active .ok {
-  transition: 2s;
-  transform: translateX(-50px);
+  transition: 1s;
+  transform: translateX(-60px);
 }
 
 h3 {
@@ -168,7 +210,7 @@ h3 {
   font-size: 16px;
 }
 
-.naming, .sidedish, .price, .price9, .price8, .price7, .price6, .price5, .price4, .price3, .price2, .price1 {
+.naming, .sidedish, .price, .price1, .price2, .price3, .price4, .price5, .price6, .price7, .price8, .price9 {
   margin-left: 10px;
 }
 
@@ -180,7 +222,7 @@ h3 {
 
 .sidedish {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
 }
 
 p {
@@ -188,50 +230,15 @@ p {
   font-weight: normal;
 }
 
-.price1 {
-  margin-left: 182Px;
-}
-.price1:active .ok {
-  transition: 2s;
-  transform: translateX(-100px);
-}
-
-.price2 {
-  margin-left: 136px;
-}
-
-.price3 {
-  margin-left: 91px;
-}
-
-.price4 {
-  margin-left: 65px;
-}
-
-.price5 {
-  margin-left: 86px;
-}
-
-.price6 {
-  margin-left: 227px;
-}
-
-.price7 {
-  margin-left: 257px;
-}
-
-.price8 {
-  margin-left: 105px;
-}
-
-.price9 {
-  margin-left: 77px;
+.price1:active {
+  transition: 1s;
+  transform: translateX(-50px);
 }
 
 .ok {
   background-color: #99E2D0;
   width: 60px;
-  left: 309px;
+  left: 380px;
   position: absolute;
   overflow: hidden;
   border-radius: 0px 15px 15px 0px;
@@ -315,4 +322,4 @@ h6 {
   display: flex;
   color: white;
   text-decoration: none;
-}/*# sourceMappingURL=Palette.css.map */
+}/*# sourceMappingURL=menu.css.map */
