--- a/Sass/_mixins.scss
+++ b/Sass/_mixins.scss
@@ -7,6 +7,7 @@
     display: flex;
     font-size: 23px;
     margin-top: 12px;
+    margin-right: 20px;
     text-decoration: none;
 }
 @mixin price{
