--- a/Sass/menu.css
+++ b/Sass/menu.css
@@ -1,29 +1,3 @@
-@flexcenter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.flexcenter, .ok, .containername, .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.heart {
-  display: flex;
-  font-size: 23px;
-  margin-top: 12px;
-  text-decoration: none;
-}
-
-.price, .price1, .price2, .price3, .price4, .price5, .price6, .price7, .price8, .price9 {
-  font-family: "robotobold";
-  display: flex;
-  font-size: 15px;
-  margin-top: 15px;
-  margin-right: 20px;
-}
-
 @-webkit-keyframes opening {
   from {
     transform: translateY(150px);
@@ -34,7 +8,6 @@
     opacity: 1;
   }
 }
-
 @keyframes opening {
   from {
     transform: translateY(150px);
@@ -106,6 +79,9 @@ body {
 }
 .header {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logoheader {
@@ -138,6 +114,9 @@ body {
 }
 
 .containername {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
   margin-left: -10px;
 }
@@ -190,6 +169,20 @@ span {
   color: black;
 }
 
+.ok {
+  background-color: #99E2D0;
+  width: 60px;
+  left: 380px;
+  position: absolute;
+  overflow: hidden;
+  border-radius: 0px 15px 15px 0px;
+  height: 65px;
+  justify-content: center;
+  align-items: center;
+  font-size: 19px;
+  color: white;
+}
+
 .txtsticker {
   display: flex;
   flex-direction: column;
@@ -201,8 +194,9 @@ span {
   margin-bottom: 10px;
 }
 .txtsticker:active .ok {
+  display: flex;
   transition: 1s;
-  transform: translateX(-60px);
+  transform: translateX(-70px);
 }
 
 h3 {
@@ -210,7 +204,7 @@ h3 {
   font-size: 16px;
 }
 
-.naming, .sidedish, .price, .price1, .price2, .price3, .price4, .price5, .price6, .price7, .price8, .price9 {
+.naming, .sidedish, .price {
   margin-left: 10px;
 }
 
@@ -230,23 +224,17 @@ p {
   font-weight: normal;
 }
 
+.price1, .price2, .price3, .price4, .price5, .price6, .price7, .price8, .price9 {
+  font-family: "robotobold";
+  display: flex;
+  font-size: 15px;
+  margin-top: 15px;
+  margin-right: 20px;
+}
+
 .price1:active {
   transition: 1s;
   transform: translateX(-50px);
-}
-
-.ok {
-  background-color: #99E2D0;
-  width: 60px;
-  left: 380px;
-  position: absolute;
-  overflow: hidden;
-  border-radius: 0px 15px 15px 0px;
-  height: 65px;
-  justify-content: center;
-  align-items: center;
-  font-size: 19px;
-  color: white;
 }
 
 /*BOUTON COMMANDER*/
@@ -260,15 +248,19 @@ p {
   font-weight: bold;
   border-radius: 20px;
   justify-content: center;
-  margin-left: 115px;
-  margin-right: 115px;
-  margin-top: 35px;
+  margin-top: 30px;
   margin-bottom: 35px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 7px;
   padding-left: 7px;
   box-shadow: 3px 3px #e7e5e5;
+  width: 100px;
+}
+
+.movebtn {
+  display: flex;
+  justify-content: center;
 }
 
 /*FOOTER*/
@@ -322,4 +314,25 @@ h6 {
   display: flex;
   color: white;
   text-decoration: none;
+}
+
+@media screen and (min-width: 500px) {
+  /*Ipad*/
+  .ok {
+    left: 770px;
+  }
+
+  .btn {
+    width: 150px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .ok {
+    display: none;
+  }
+
+  .ok:hover {
+    display: flex;
+    transition: 3s;
+  }
 }/*# sourceMappingURL=menu.css.map */
