--- a/Sass/menu.css
+++ b/Sass/menu.css
@@ -18,6 +18,16 @@
     opacity: 1;
   }
 }
+@-webkit-keyframes appear {
+  to {
+    visibility: visible;
+  }
+}
+@keyframes appear {
+  to {
+    visibility: visible;
+  }
+}
 @font-face {
   font-family: "Shrikhand";
   src: url("shrikhand/Shrikhand-Regular.otf");
@@ -41,42 +51,52 @@ body {
   font-weight: bold;
 }
 
-.loader {
-  display: none;
-  border: 16px solid #f3f3f3;
-  /* Light grey */
-  border-top: 16px solid #3498db;
-  /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 3s linear;
-          animation: spin 3s linear;
-}
-
 @-webkit-keyframes spin {
   0% {
     transform: rotate(0deg);
+    opacity: 0;
+  }
+  50% {
+    transform: rotate(360deg);
     opacity: 1;
   }
   100% {
-    transform: rotate(360deg);
-    opacity: O;
-    transition-duration: 5s;
+    visibility: hidden;
   }
 }
 
 @keyframes spin {
   0% {
     transform: rotate(0deg);
+    opacity: 0;
+  }
+  50% {
+    transform: rotate(360deg);
     opacity: 1;
   }
   100% {
-    transform: rotate(360deg);
-    opacity: O;
-    transition-duration: 5s;
+    visibility: hidden;
   }
 }
+.imgcook {
+  display: block;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: 30%;
+  left: 25%;
+  -webkit-animation: spin 3s linear;
+          animation: spin 3s linear;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.allmenu {
+  -webkit-animation: appear 0s 3s forwards;
+          animation: appear 0s 3s forwards;
+  visibility: hidden;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -146,18 +166,18 @@ span {
 }
 
 .transition1 {
-  -webkit-animation: opening 2s;
-          animation: opening 2s;
+  -webkit-animation: opening 7s;
+          animation: opening 7s;
 }
 
 .transition2 {
-  -webkit-animation: opening 3s;
-          animation: opening 3s;
+  -webkit-animation: opening 8s;
+          animation: opening 8s;
 }
 
 .transition3 {
-  -webkit-animation: opening 4s;
-          animation: opening 4s;
+  -webkit-animation: opening 9s;
+          animation: opening 9s;
 }
 
 .title {
@@ -171,8 +191,8 @@ span {
 
 .ok {
   background-color: #99E2D0;
-  width: 60px;
-  left: 380px;
+  width: 0px;
+  left: 310px;
   position: absolute;
   overflow: hidden;
   border-radius: 0px 15px 15px 0px;
@@ -194,9 +214,15 @@ span {
   margin-bottom: 10px;
 }
 .txtsticker:active .ok {
+  visibility: visible;
   display: flex;
   transition: 1s;
-  transform: translateX(-70px);
+  width: 60px;
+}
+.txtsticker:active .price {
+  display: flex;
+  transition: 1s;
+  transform: translate(-70px);
 }
 
 h3 {
@@ -219,22 +245,25 @@ h3 {
   justify-content: space-between;
 }
 
+.ellipsis {
+  display: block;
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 p {
   font-size: 15px;
   font-weight: normal;
 }
 
-.price1, .price2, .price3, .price4, .price5, .price6, .price7, .price8, .price9 {
+.price {
   font-family: "robotobold";
   display: flex;
   font-size: 15px;
   margin-top: 15px;
   margin-right: 20px;
-}
-
-.price1:active {
-  transition: 1s;
-  transform: translateX(-50px);
 }
 
 /*BOUTON COMMANDER*/
@@ -318,21 +347,60 @@ h6 {
 
 @media screen and (min-width: 500px) {
   /*Ipad*/
+  .arrow {
+    font-size: 30px;
+    top: 30px;
+  }
+
   .ok {
-    left: 770px;
+    left: 700px;
   }
 
   .btn {
     width: 150px;
   }
+
+  .imgcook {
+    width: 250px;
+    height: 250px;
+    left: 35%;
+  }
 }
-@media screen and (min-width: 768px) {
-  .ok {
-    display: none;
+@media screen and (min-width: 769px) {
+  .arrow {
+    top: 50px;
   }
 
-  .ok:hover {
+  .bannerpic {
     display: flex;
-    transition: 3s;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+    position: absolute;
+  }
+
+  .allmenu {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .menu {
+    top: 475px;
+  }
+
+  .flexmenu {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .txtsticker {
+    width: 110%;
+  }
+
+  .imgcook {
+    width: 300px;
+    height: 300px;
+    left: 40%;
   }
 }/*# sourceMappingURL=menu.css.map */
