--- a/Sass/style.css
+++ b/Sass/style.css
@@ -1,62 +1,147 @@
 @-webkit-keyframes opening {
   from {
-    transform: translateY(150px);
+    -webkit-transform: translateY(150px);
+            transform: translateY(150px);
     opacity: 0;
   }
   to {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes opening {
   from {
-    transform: translateY(150px);
+    -webkit-transform: translateY(150px);
+            transform: translateY(150px);
     opacity: 0;
   }
   to {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     opacity: 1;
   }
 }
+
 @-webkit-keyframes appear {
   to {
     visibility: visible;
   }
 }
+
 @keyframes appear {
   to {
     visibility: visible;
   }
 }
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateX(30px);
+            transform: translateX(30px);
+    opacity: .5;
+  }
+  100% {
+    -webkit-transform: translateX(60px);
+            transform: translateX(60px);
+    opacity: 1;
+  }
+}
+
+@keyframes slide {
+  0% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+    opacity: 0;
+  }
+  50% {
+    -webkit-transform: translateX(30px);
+            transform: translateX(30px);
+    opacity: .5;
+  }
+  100% {
+    -webkit-transform: translateX(60px);
+            transform: translateX(60px);
+    opacity: 1;
+  }
+}
+
 @font-face {
-  font-family: "Shrikhand";
+  font-family: 'Shrikhand';
   src: url("shrikhand/Shrikhand-Regular.otf");
 }
+
 @font-face {
-  font-family: "roboto_condensedbold";
+  font-family: 'roboto_condensedbold';
   src: url("RobotoCondensed-Bold-webfont.eot");
   src: url("RobotoCondensed-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Bold-webfont.woff2") format("woff2"), url("RobotoCondensed-Bold-webfont.woff") format("woff"), url("RobotoCondensed-Bold-webfont.ttf") format("truetype"), url("RobotoCondensed-Bold-webfont.svg#roboto_condensedbold") format("svg");
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
-  font-family: "roboto_condensedlight";
+  font-family: 'roboto_condensedlight';
   src: url("RobotoCondensed-Light-webfont.eot");
   src: url("RobotoCondensed-Light-webfont.eot?#iefix") format("embedded-opentype"), url("RobotoCondensed-Light-webfont.woff") format("woff"), url("RobotoCondensed-Light-webfont.ttf") format("truetype"), url("RobotoCondensed-Light-webfont.svg#roboto_condensedlight") format("svg");
   font-weight: normal;
   font-style: normal;
 }
+
 body {
-  font-family: "roboto_condensedbold";
+  font-family: 'roboto_condensedbold';
   font-weight: bold;
 }
 
 /*Header*/
 .header {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .logoheader {
@@ -67,17 +152,30 @@ body {
 
 /*Formulaire Location*/
 .containerlocation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  justify-content: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   border-top: #ebe7e7 solid 2px;
 }
 
 .location {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
   background-color: #F3F3F3;
   font-size: 16px;
@@ -96,6 +194,8 @@ body {
 
 /*1ere Section avec H1 et Bouton*/
 h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-align: center;
   font-size: 28px;
@@ -105,9 +205,11 @@ h1 {
 }
 
 h2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-align: center;
-  font-family: "roboto_condensedlight";
+  font-family: 'roboto_condensedlight';
   font-size: 16px;
   font-weight: normal;
   color: #8a8888;
@@ -123,33 +225,49 @@ h2 {
 }
 
 .movebtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9408f1));
   background: linear-gradient(#FF79DA, #9408f1);
   border: none;
   color: white;
   text-decoration: none;
-  font-family: "roboto_condensedlight";
+  font-family: 'roboto_condensedlight';
   font-size: 15px;
   font-weight: normal;
   border-radius: 20px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 7px;
   padding-left: 7px;
-  box-shadow: 1px 5px #c9c6c6;
+  -webkit-box-shadow: 1px 5px #c9c6c6;
+          box-shadow: 1px 5px #c9c6c6;
+  -webkit-transition: 2s;
   transition: 2s;
 }
+
 .btn:hover {
   background: #FF79DA;
-  box-shadow: 3px 7px #c9c6c6;
-  transition: 1s;
+  -webkit-box-shadow: 3px 7px #504d4d;
+          box-shadow: 3px 7px #504d4d;
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 /* 2eme Section Fonctionnement et 3 boutons*/
@@ -182,13 +300,23 @@ h3 {
 }
 
 .btnfonction {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   background-color: #f9f8f8f6;
   border: none;
-  box-shadow: 2px 3px #e7e5e5;
+  -webkit-box-shadow: 2px 3px #e7e5e5;
+          box-shadow: 2px 3px #e7e5e5;
   text-decoration: none;
   color: black;
   font-size: 16px;
@@ -203,10 +331,19 @@ h3 {
 }
 
 .containerbtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 p {
@@ -218,9 +355,15 @@ p {
   border-radius: 20px;
   width: 22px;
   height: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 /*3eme section Restaurants*/
@@ -231,8 +374,13 @@ p {
 }
 
 .sticker {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: white;
   border-radius: 10px 10px 10px 10px;
   width: 97%;
@@ -240,7 +388,8 @@ p {
   margin-bottom: 25px;
   margin-top: -10px;
   overflow: hidden;
-  box-shadow: #dddada 3px 3px;
+  -webkit-box-shadow: #dddada 3px 3px;
+          box-shadow: #dddada 3px 3px;
 }
 
 .containerpic {
@@ -249,9 +398,15 @@ p {
 }
 
 .new {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 15px;
   font-weight: bold;
   color: #0c8151;
@@ -276,12 +431,32 @@ h4 {
 }
 
 .txtheart {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.heart1, .heart2, .heart4, .heart3 {
+.empty {
+  position: relative;
+  z-index: 0;
+}
+
+.full {
+  position: absolute;
+  z-index: -1;
+  color: #FF79DA;
+}
+
+.heart {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 23px;
   margin-top: 12px;
@@ -289,16 +464,14 @@ h4 {
   text-decoration: none;
 }
 
-.fa-heart {
-  transition: 0s;
-}
-.fa-heart:active {
-  transition: 5s;
-  color: #FF79DA;
+.heart:hover .full {
+  z-index: 1;
+  -webkit-transition: 3s;
+  transition: 3s;
 }
 
 h5 {
-  font-family: "roboto_condensedlight";
+  font-family: 'roboto_condensedlight';
   font-size: 20px;
   font-weight: normal;
   margin-top: -25px;
@@ -307,9 +480,15 @@ h5 {
 }
 
 .txtrestaurants {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 5px;
 }
 
@@ -319,7 +498,7 @@ h5 {
 }
 
 h6 {
-  font-family: "shrikhand";
+  font-family: 'shrikhand';
   color: white;
   font-size: 20px;
   font-weight: normal;
@@ -330,7 +509,7 @@ h6 {
 }
 
 .txtfooter {
-  font-family: "roboto_condensedlight";
+  font-family: 'roboto_condensedlight';
   font-size: 15px;
   font-weight: normal;
   color: white;
@@ -339,16 +518,22 @@ h6 {
 }
 
 .proposition, .partnair {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 5px;
 }
 
 .ustensil {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 10px;
 }
 
 .hands {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 8px;
   font-size: 11px;
@@ -367,89 +552,95 @@ h6 {
 @media screen and (min-width: 500px) {
   /*Ipad*/
   h1 {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-
   h2 {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-
   .btn {
     width: 200px;
   }
-
   .picture {
     -o-object-fit: cover;
        object-fit: cover;
   }
-
   .new {
     left: 5px;
   }
-
   .txtrestaurants {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
+
 @media screen and (min-width: 801px) {
   .location {
     height: 100px;
     padding-left: 120px;
     font-size: 35px;
   }
-
   .txtlocation {
     font-size: 35px;
   }
-
   h1 {
     font-size: 35px;
   }
-
   h2 {
     font-size: 35px;
   }
-
   .first {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
   .btn {
     width: 290px;
     font-size: 25px;
   }
-
   .btnfonction {
-    width: 320px;
+    width: 350px;
     font-size: 25px;
   }
-
   p {
     font-size: 30px;
     width: 35px;
     height: 35px;
   }
-
   .restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
-
   .sticker {
     width: 45%;
     margin-bottom: 50px;
     margin-right: 25px;
   }
-
   .new {
     width: 100px;
     height: 40px;
   }
-
   h3 {
     font-size: 40px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
